--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,11 @@
 
       <ul class="nav">
         <li class="active"><a href="/">Home</a></li>
+        <li class="active"><a href="/jobs/new">New Job</a></li>
+        <li class="active"><a href="/ships/new">New Ship</a></li>
+
+
+
       </ul>
 
 
