--- a/app/views/ship_jobs/index.html.erb
+++ b/app/views/ship_jobs/index.html.erb
@@ -1,2 +1,2 @@
-<h1>ShipJob#index</h1>
-<p>Find me in app/views/ship_job/index.html.erb</p>
+<h1>ShipJobs#index</h1>
+<p>Find me in app/views/ship_jobs/index.html.erb</p>
