--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,18 +16,11 @@
         <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
       <% else %>
         <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-        <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+        <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>     |
+
       <% end %>
       </p>
 
-      <ul class="nav">
-        <li class="active"><a href="/">Home</a></li>
-        <li class="active"><a href="/jobs/new">New Job</a></li>
-        <li class="active"><a href="/ships/new">New Ship</a></li>
-
-
-
-      </ul>
 
 
     <% if notice %>
